# jetsona

./: .env  .env.example  .gitattributes  .gitignore  CMakeLists.txt  README.md  config.yaml  install.md  lv_conf.h  run.sh
.tmp/: remote_inspect.sh
assets/icons/: ATTRIBUTION.md
build-fbdev/: jetson_kiosk_bar
build-fbdev/assets/fonts/cloud/: catalog.tsv
build-fbdev/assets/icons/programming/: README.txt  manifest.json
docs/: ps-remote-play.md
scripts/: .psrp_profile_test.sh  build.sh  config_loader.sh  fan.service  fan.sh  fetch_assets.sh  fetch_deps.sh  install-login-banner.sh  install.sh  jetson-fan-curve.sh  jetson-fan.conf  jetson-fan.service  jetson-fw.service  jetson_fw_run.sh  jetsona-webrtc-input.service  jetsona-webrtc-publisher.service  jetsona_webrtc_input.py  jetsona_webrtc_stream.sh  launch_chromium.sh  launch_ps_remote_play.sh  ps_remote_play_ctl.sh  run_fbdev.sh  s3_assets.py  setup-tailscale-client.sh  setup-tailscale-exit-node.sh  test_ps_remote_play.sh  test_terminal_render_path.py  test_webrtc_browser.ps1
src/: main.cc
src/agent/: conversation.cc  conversation.h  device_bridge.cc  device_bridge.h  llm_client.cc  llm_client.h  system_tools.cc  system_tools.h  tools.cc  tools.h
src/app/: application.cc  application.h  audio_codec.cc  audio_codec.h  backlight.h  board.cc  board.h  boot_prefetch.cc  boot_prefetch.h  button.h  device_state.h  fonts.cc  fonts.h  led.h  settings.cc  settings.h  system_info.cc  system_info.h
src/display/: background_gallery_view.cc  background_gallery_view.h  backgrounds.h  bluetooth_settings_view.cc  bluetooth_settings_view.h  calendar_view.h  chat_view.cc  ds02_home_display.cc  ds02_home_display.h  lcd_display.cc  lock_screen_view.cc  lock_screen_view.h  lvgl_display.h  lvgl_font.h  lvgl_image.cc  lvgl_theme.h  overlay_view.cc  overlay_view.h  settings_view.cc  settings_view.h  telex_ime.cc  terminal_view.cc  terminal_view.h  wifi_settings_view.cc  wifi_settings_view.h
src/display/common/: airplane_icon.cc  airplane_icon.h  backgrounds.cc  backgrounds.h  lvgl_utils.h  signal_bars.cc  signal_bars.h  trash_store.cc  trash_store.h
src/display/core/: app_icons.cc  app_icons.h  display.cc  display.h  lcd_display.cc  lcd_display.h  lvgl_display.cc  lvgl_display.h  lvgl_font.h  lvgl_image.cc  lvgl_image.h  lvgl_theme.cc  lvgl_theme.h
src/display/home/: app_switcher.cc  app_switcher.h  ds02_home_display.cc  ds02_home_display.h
src/display/theme/: terminal_theme.cc  terminal_theme.h  ui_theme.cc  ui_theme.h
src/display/views/: background_gallery_view.cc  background_gallery_view.h  bluetooth_settings_view.cc  bluetooth_settings_view.h  calendar_view.cc  calendar_view.h  chat_view.cc  chat_view.h  documents_view.cc  documents_view.h  lock_screen_view.cc  lock_screen_view.h  music_view.cc  music_view.h  overlay_view.cc  overlay_view.h  pods_view.cc  pods_view.h  ps_remote_play_view.cc  ps_remote_play_view.h  reminders_view.cc  reminders_view.h  settings_view.cc  settings_view.h  terminal_view.cc  terminal_view.h  trash_view.cc  trash_view.h  wifi_settings_view.cc  wifi_settings_view.h
src/display/widgets/: assistant_orbit.cc  assistant_orbit.h  ekko_bar.cc  ekko_bar.h  optimize_widget.cc  optimize_widget.h  status_bar.cc  status_bar.h  telex_ime.cc  telex_ime.h
src/input/: gamepad_device.cc  gamepad_device.h
src/media/: music_types.h  player_controller.cc  player_controller.h  user_library.cc  user_library.h
src/net/: airplane_mode.cc  airplane_mode.h  bluetooth_manager.cc  bluetooth_manager.h  captive_portal.cc  captive_portal.h  ethernet_status.cc  ethernet_status.h  runpod_client.cc  runpod_client.h  vpn_manager.cc  vpn_manager.h  weather_client.cc  weather_client.h  wifi_manager.cc  wifi_manager.h  zing_discover_cache.cc  zing_discover_cache.h  zing_music_client.cc  zing_music_client.h
src/platform/: fan_control.cc  fan_control.h  lvgl_runtime.cc  lvgl_runtime.h  lvgl_sdl_compat.h  perf_governor.cc  perf_governor.h  shell_command.cc  shell_command.h  task_pool.cc  task_pool.h
src/power/: ina219.cc  ina219.h
src/shims/: esp_err.h  esp_heap_caps.h  esp_lcd_panel_io.h  esp_lcd_panel_ops.h  esp_log.h  esp_pm.h  esp_system.h  esp_timer.h  font_awesome.h
src/shims/freertos/: FreeRTOS.h  event_groups.h  semphr.h  task.h
tools/: fb_webrtc_publisher.cc
tools/kiosk_bar/: gen_kiosk_icons.ps1  kiosk_bar.c  kiosk_icons.h
vm/code-server/: deploy.py  docker-compose.yml
vm/jetsona-webrtc/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  next.config.mjs  package-lock.json  package.json  server.mjs
vm/jetsona-webrtc/src/app/: globals.css  layout.tsx  page.tsx
vm/jetsona-webrtc/src/app/api/wol/status/: route.ts
vm/jetsona-webrtc/src/app/api/wol/wake/: route.ts
vm/jetsona-webrtc/src/app/login/: page.tsx
vm/jetsona-webrtc/src/app/media/jetsona/whep/: route.ts
vm/jetsona-webrtc/src/components/: DeviceDock.tsx  DeviceTabs.tsx  LoginForm.tsx  PcPanel.tsx  PowerOverlay.tsx  RemoteConsole.tsx  RemoteScreen.tsx  StatusPill.tsx  WebRtcClient.tsx
vm/jetsona-webrtc/src/components/ui/: background-snippets.tsx  login-1.tsx  toast.tsx
vm/jetsona-webrtc/src/lib/: codes.ts  devices.ts
vm/lightpanda-search-gw/: Dockerfile  deploy.py  docker-compose.yml  server.js
